@@ -1,6 +1,11 @@
-2008-03-28	Andrei Krüger	<anc/at/iki/dot/fi>
+2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>
 
-	* ima/src/kmultitabbar.cpp
+	* ima/src/classroom_manager.cpp:
+	arrange order is based on classroom manager list
+
+2008-03-28	Andrei Krueger	<anc/at/iki/dot/fi>
+
+	* ima/src/kmultitabbar.cpp:
 	support for Qt 4.2
 	
 2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
